Fix dark mode shadow CSS rule

--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ html {
 .light body, .light .nx-sticky, .light .dark\:bg-dark{background-color: #FCFCFC !important;}
 
 /*shadow*/
-.dark .dark\:shadow-\[0_-12px_16px_\#111\] {
-  --tw-shadow: 0 -12px 16px #1e1e1e;
+.dark {
+  --tw-shadow: 0 -12px 16px #1e1e1e !important;
 }
 
 
